<resources>
    <string name="app_name">TvShowKotlin</string>
    <string name="type">Type : </string>
    <string name="rating">Rating : </string>
    <string name="schedule">Schedule : </string>
    <string name="hello">Hello</string>
    <string name="todo">TODO</string>
    <string name="language">Language : </string>
    <string name="description">Description : </string>
    <string name="dummy_description">The town\'s inhabitants must deal with surviving the post-apocalyptic conditions while searching for answers about the dome, where it came from and if and when it will go away.</string>
</resources>
